Added a comment about the reference

--- a/Detecting-fake-news.ipynb
+++ b/Detecting-fake-news.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "406e17bf",
+   "id": "c1f477ad",
    "metadata": {},
    "outputs": [
     {
@@ -197,13 +197,14 @@
     }
    ],
    "source": [
+    "# Reference: https://data-flair.training/blogs/advanced-python-project-detecting-fake-news/\n",
     "# pip install numpy pandas sklearn"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d7d48d74",
+   "id": "c3b11774",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b520b199",
+   "id": "af6729e0",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4238e037",
+   "id": "dab768b0",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3057135f",
+   "id": "95240ba9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "64eb4e62",
+   "id": "bd0d2c1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "420625fb",
+   "id": "c51c9de6",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "076ddd33",
+   "id": "34f19b73",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01f84c4e",
+   "id": "f2864004",
    "metadata": {},
    "outputs": [],
    "source": []
